--- a/src/components/gui/gui.css
+++ b/src/components/gui/gui.css
@@ -10,7 +10,7 @@
 
 .body-wrapper {
     height: calc(100% - $menu-bar-height);
-    background-color: #FFFFFF;
+    background-color: #474646;
 }
 
 .body-wrapper * {
